# meshgraphnet-welding

./: .gitignore  PROGRESS.md  README.md  RUNPOD.md  config.example.json  config.generic_baseline.json  config.generic_enthalpy_src_v2.json  config.generic_enthalpy_v2.json  config.generic_full_n5.json  config.generic_full_v2.json  config.generic_full_v2_runpod.json  config.generic_physics.json  config.generic_physics_n5.json  config.genoff_v2.json  config.local_gpu.json  config.local_gpu_pushforward.json  config.local_gpu_v2.json  config.runpod.json  config.runpod_enthalpy_pf.json  config.runpod_genoff_pf.json  pyproject.toml
data/raw/: sim_train_001.npz  sim_train_002.npz  sim_train_003.npz  sim_train_004.npz  sim_train_005.npz  sim_train_006.npz  sim_train_007.npz  sim_train_008.npz  sim_train_009.npz  sim_train_010.npz  sim_train_011.npz  sim_train_012.npz  sim_train_013.npz  sim_train_014.npz  sim_train_015.npz  sim_train_016.npz  sim_train_017.npz  sim_train_018.npz  sim_train_019.npz  sim_train_020.npz  sim_train_021.npz  sim_train_022.npz  sim_train_023.npz  sim_train_024.npz  sim_train_025.npz  sim_train_026.npz  sim_train_027.npz  sim_train_028.npz  sim_train_029.npz  sim_train_030.npz  sim_train_031.npz  sim_train_032.npz  sim_train_033.npz  sim_train_034.npz  sim_train_035.npz  sim_train_036.npz  sim_train_037.npz  sim_train_038.npz  sim_train_039.npz  sim_train_040.npz  (+85 more)
docs/: ablation_k2_results.md  enthalpy_generic_implementation.md  final_model_theory_and_structure.md  flujo_informacion_red_para_dummies.tex  generic_entalpico_para_dummies.tex  generic_entropy_design_note.md  generic_thermodynamics_congress.md  implementacion_pytorch_para_dummies.tex  runpod_mcp_setup.md  talk_audio_en.txt  talk_script_en.md  talk_script_en_tagged.md  training_set_design_v2.md
docs/paper/: welding_mgn_paper.tex  welding_mgn_slides.tex
scripts/: make_dataset_samples_fig.py  make_minT_fig.py  make_spiral_video.py  make_talk_audio.py  runpod_train.sh
scripts/ablation/: build_ablation_figures.py  spiral_genoff_sweep.csv  spiral_genon_sweep.csv
src/data/: __init__.py  graph_builder.py
src/models/: __init__.py  meshgraphnet.py
src/simulation/: __init__.py  generate_dataset.py  thermal_solver.py
src/training/: __init__.py  rollout.py  spiral_analysis.py  spiral_fem.py  spiral_rollout.py  train.py  utils.py  val_analysis.py
tests/: test_generate_dataset.py  test_graph_builder.py  test_meshgraphnet.py  test_rollout.py  test_thermal_solver.py  test_train.py  test_training_utils.py
